kube/staging/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: chatbot-staging
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      volumes:
        - name: gpay-keys
          secret:
            secretName: gpay-keys
        - name: static
          persistentVolumeClaim:
            claimName: django-static
        - name: media
          persistentVolumeClaim:
            claimName: django-media
      containers:
        - name: gunicorn
          image: theenbyperor/wewillfixyourpcbot_django:(version)
          imagePullPolicy: Always
          command: ["gunicorn", "-w", "4", "-b", "0.0.0.0:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "wewillfixyourpc_bot.wsgi:application"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/gpay-keys/"
              name: gpay-keys
              readOnly: true
            - mountPath: "/app/static/"
              name: static
            - mountPath: "/app/media/"
              name: media

        - name: daphne
          image: theenbyperor/wewillfixyourpcbot_django:(version)
          imagePullPolicy: Always
          command: ["daphne", "-b", "0.0.0.0", "-p", "8001", "--proxy-headers", "--access-log", "-", "wewillfixyourpc_bot.asgi:application"]
          ports:
            - containerPort: 8001
          volumeMounts:
            - mountPath: "/gpay-keys/"
              name: gpay-keys
              readOnly: true
            - mountPath: "/app/static/"
              name: static
            - mountPath: "/app/media/"
              name: media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery
  namespace: chatbot-staging
  labels:
    app: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      volumes:
        - name: gpay-keys
          secret:
            secretName: gpay-keys
        - name: static
          persistentVolumeClaim:
            claimName: django-static
        - name: media
          persistentVolumeClaim:
            claimName: django-media
      containers:
        - name: celery
          image: theenbyperor/wewillfixyourpcbot_django:(version)
          imagePullPolicy: Always
          command: ["celery", "worker", "-A", "wewillfixyourpc_bot", "--loglevel=INFO", "-c", "32"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/gpay-keys/"
              name: gpay-keys
              readOnly: true
            - mountPath: "/app/static/"
              name: static
            - mountPath: "/app/media/"
              name: media
---
apiVersion: v1
kind: Service
metadata:
  namespace: chatbot-staging
  name: django
  labels:
    app: django
spec:
  selector:
    app: django
  ports:
    - port: 8000
      targetPort: 8000
      name: gunicorn
    - port: 8001
      targetPort: 8001
      name: daphne
