kube/staging/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: chatbot-staging
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: django-static
        - name: media
          persistentVolumeClaim:
            claimName: django-media
        - name: conf
          configMap:
            name: nginx-conf
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/data/static/"
              name: static
            - mountPath: "/data/media/"
              name: media
            - mountPath: "/etc/nginx/nginx.conf"
              name: conf
              subPath: "nginx.conf"
---
apiVersion: v1
kind: Service
metadata:
  namespace: chatbot-staging
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      name: nginx
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: chatbot-ingress
  namespace: chatbot-staging
  annotations:
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
        - staging.bot.cardifftec.uk
      secretName: chatbot-tls
  rules:
  - host: staging.bot.cardifftec.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
